# NML

./: .gitignore  CONTRIBUTING.md  LICENSE  Project Roadmap.md  README.md  app.py  components.nml  main.py  nml_parse.py  package.json  pyproject.toml  test_parse.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  python-tests.yml
docs/: Project Roadmap.md  templating.md
examples/: README.md
examples/components/: README.md  package.json  wrangler.jsonc
examples/components/views/: components.nml  index.nml
examples/components/worker/: index.ts
examples/hello-world/: README.md  package.json  wrangler.jsonc
examples/hello-world/views/: index.nml
examples/htmx-todo/: README.md  package.json  vite.config.ts  wrangler.jsonc
examples/htmx-todo/views/: index.nml
examples/htmx-todo/worker/: index.ts
static/: nml_runtime.js
templates/: 404.nml  counter.nml  index.nml  login-page.nml
templates/users/: [id].nml
