[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nml"
version = "0.1.0"
description = "NML: A simple, component-first web UI language that compiles to HTML"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "NML Authors" }
]
# Runtime dependency for variable escaping used by the compiler
dependencies = [
  "MarkupSafe>=2.1"
]

[project.optional-dependencies]
# Developer extras: tests and dev server
dev = [
  "pytest",
  "Flask>=2.3"
]

[project.scripts]
# Console entry: nmlc
nmlc = "main:cli_main"
